recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:14: error: expected start of definition
	override def run() {
                 ^Spiral:18: error: Unmatched closing brace '}' ignored here
}
^